proyecto2/kubernestes/drupal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drupal
  template:
    metadata:
      labels:
        app: drupal
    spec:
      securityContext: 
        fsGroup: 1001
      containers:
      - name: drupal
        image: bitnami/drupal:10.1.5-debian-11-r3
        securityContext:
          runAsUser: 1001 
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "400m"
            memory: "512Mi"
          limits:
            cpu: "800m"  
            memory: "1Gi"
        livenessProbe:
          httpGet:
            path: /user/login
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - name: drupal-storage
          mountPath: /bitnami/drupal
      volumes:
      - name: drupal-storage
        persistentVolumeClaim:
          claimName: nfs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: drupal-service
spec:
  selector:
    app: drupal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  sessionAffinity: None
  type: NodePort
